# weibo-nostr-rss-bot

./: .gitignore  Cargo.toml  fetch.rs  lib.rs  uid.rs
config/: conf.yaml
nostr_db/: .env  Cargo.toml
nostr_db/migrations/2024-04-04-062658_crate_users/: up.sql
nostr_db/migrations/2024-04-04-062802_crate_contents/: down.sql  up.sql
nostr_db/src/: lib.rs  models.rs  schema.rs
src/: fetch.rs  lib.rs  msg.rs  rss.rs  uid.rs
src/conf/: mod.rs
src/nostr/: mod.rs
