workspace = { members = ["nostr_db"] }
[package]
name = "weibo-nostr"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.2"
tokio = { version = "1", features = ["full"] }
rss = "2.0"
nostr-sdk = "0.29"
url = "2.2.2"
serde_yaml = "0.9.31"
sonic-rs = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
nostr_db = { path = "./nostr_db" }
